<resources>
    <string name="app_name">MobileSafe</string>

    <string name="action_settings">设置</string>
    <string name="update">发现新版本：</string>
    <string name="update_content">新版本，更精彩，等你来发掘</string>
    <string name="ok">马上升级</string>
    <string name="no">暂不升级</string>
    <string name="title_activity_main">手机保护神</string>
    <string name="steal_protect">手机防盗</string>
    <string name="info_protect">信息保护</string>
    <string name="title_activity_steal_protect">StealProtectActivity</string>
    <string name="password">密码确认</string>
    <string name="comfirm">确定</string>
    <string name="cancel">取消</string>
    <string name="set_password">请设置密码</string>
    <string name="setting_pwd_text">请输入密码</string>
    <string name="comfirm_pwd">请确认密码</string>
    <string name="empty_pwd">密码不能为空，请重新输入</string>
    <string name="different_pwd">密码不一致，请重新输入</string>
    <string name="pwd_setting_success">密码设置成功</string>
    <string name="incorrect_pwd">密码错误，请重新输入</string>
    <string name="correct_pwd">密码正确，欢迎欢迎，热烈欢迎</string>
    <string name="reset_password">重置密码</string>
    <string name="input_original_pwd">请输入原密码</string>
    <string name="input_new_pwd">请输入新密码</string>
    <string name="change_title">改头换面</string>
    <string name="pls_input_your_want_name">请起名</string>
    <string name="reset_title">重置名称</string>
    <string name="call_protect">电话防盗</string>
    <string name="status_close">关闭</string>
    <string name="kill_virus">病毒查杀</string>
    <string name="title_activity_info_protect">InfoProtectActivity</string>
    <string name="title_activity_virus_killer">VirusKillerActivity</string>
    <string name="app_manager">程序管理</string>
    <string name="tel_query">来电查询</string>
    <string name="title_activity_tel_query">TelQueryActivity</string>
    <string name="tel_location">来电地址</string>
    <string name="title_activity_query_number">QueryNumberActivity</string>
    <string name="query_address">查询</string>
    <string name="pls_input_tel_number">请输入号码</string>
    <string name="show_place">显示位置调整</string>
    <string name="clear_number">重置</string>
    <string name="title_activity_display_adjust">DisplayAdjustActivity</string>
    <string name="drag_display">拖动选择</string>
    <string name="tv_display_point">显示位置</string>
    <string name="sick">哥感冒了</string>
    <string name="black_list">黑名单</string>
    <string name="title_activity_black_list">BlackListActivity</string>
    <string name="choose_number_from_contact">选择</string>
    <string name="add_number_to_black_list">添加</string>
    <string name="bt_cbl_remove">移除</string>
    <string name="title_activity_contact_list">ContactListActivity</string>
    <string name="ccl_contact">联系人</string>
</resources>
