<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/input_password"
        android:hint="@string/input_original_pwd"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/set_password"
        android:hint="@string/input_new_pwd"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/reset_password"
        android:layout_marginTop="10dp"
        android:hint="@string/comfirm_pwd"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>