<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.test.mobilesafe.activity.BlackListActivity"
    tools:showIn="@layout/activity_black_list">

    <LinearLayout
        android:id="@+id/ll_cbl_choose_add"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_cbl_input_number"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content">
        </EditText>

        <Button
            android:id="@+id/bt_cbl_choose"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/choose_number_from_contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/bt_cbl_add"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/add_number_to_black_list"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/tv_cbl_black_list"
        android:layout_below="@id/ll_cbl_choose_add"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:text="@string/black_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_below="@id/ll_cbl_choose_add"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:paddingTop="10dp"
        android:id="@+id/iv_cbl_devide_line"
        android:layout_below="@id/tv_cbl_black_list"
        android:src="@drawable/solidline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/lv_cbl_list_view"
        android:layout_below="@id/iv_cbl_devide_line"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ListView>
</RelativeLayout>
